--- a/public/index.html
+++ b/public/index.html
@@ -436,6 +436,117 @@
           </div>
         </div>
       </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="py-24 px-4">
+        <div class="container mx-auto">
+          <!-- Section Title -->
+          <h2
+            class="text-4xl md:text-5xl font-bold text-center mb-16"
+            data-aos="fade-up"
+          >
+            Contact Me
+            <div class="w-24 h-1 bg-primary mx-auto mt-4 rounded-full"></div>
+          </h2>
+
+          <div
+            class="grid md:grid-cols-2 gap-16 items-center max-w-6xl mx-auto"
+          >
+            <!-- Image Side -->
+            <div class="relative" data-aos="fade-right">
+              <div class="w-full max-w-md mx-auto">
+                <div class="relative z-10">
+                  <img
+                    src="./images/person.png"
+                    alt="Contact Me"
+                    class="w-full h-auto rounded-2xl shadow-xl"
+                  />
+                  <div
+                    class="absolute -bottom-6 -right-6 w-32 h-32 bg-primary rounded-2xl -z-10 opacity-90"
+                  ></div>
+                  <div
+                    class="absolute -top-6 -left-6 w-32 h-32 border-2 border-primary rounded-2xl -z-10"
+                  ></div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Content Side -->
+            <div class="space-y-8" data-aos="fade-left">
+              <div class="space-y-4">
+                <h3 class="text-2xl font-semibold text-primary">
+                  Get in Touch
+                </h3>
+                <p class="text-gray-600 dark:text-gray-400 text-lg">
+                  I'm currently available for freelance projects. If you have a
+                  project in mind or just want to say hi, feel free to send me a
+                  message.
+                </p>
+              </div>
+
+              <!-- Contact Form -->
+              <form class="space-y-6">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                  <div class="space-y-2">
+                    <label class="text-sm font-medium">Full Name</label>
+                    <input
+                      type="text"
+                      placeholder="John Doe"
+                      class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                    />
+                  </div>
+                  <div class="space-y-2">
+                    <label class="text-sm font-medium">Email Address</label>
+                    <input
+                      type="email"
+                      placeholder="john@example.com"
+                      class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                    />
+                  </div>
+                </div>
+
+                <div class="space-y-2">
+                  <label class="text-sm font-medium">Subject</label>
+                  <input
+                    type="text"
+                    placeholder="Project Inquiry"
+                    class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                  />
+                </div>
+
+                <div class="space-y-2">
+                  <label class="text-sm font-medium">Message</label>
+                  <textarea
+                    rows="4"
+                    placeholder="Your message here..."
+                    class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 resize-none"
+                  ></textarea>
+                </div>
+
+                <button
+                  type="submit"
+                  class="w-full md:w-auto bg-primary text-white px-8 py-3.5 rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300 flex items-center justify-center gap-2 group"
+                >
+                  <span>Send Message</span>
+                  <svg
+                    class="w-5 h-5 transform group-hover:translate-x-1 transition-transform duration-300"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M14 5l7 7m0 0l-7 7m7-7H3"
+                    />
+                  </svg>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer Section -->
