--- a/public/index.html
+++ b/public/index.html
@@ -438,11 +438,11 @@
       </section>
 
       <!-- Contact Section -->
-      <section id="contact" class="py-24 px-4">
+      <section id="contact" class="py-12 md:py-24 px-4">
         <div class="container mx-auto">
           <!-- Section Title -->
           <h2
-            class="text-4xl md:text-5xl font-bold text-center mb-16"
+            class="text-4xl md:text-5xl font-bold text-center mb-8 md:mb-16"
             data-aos="fade-up"
           >
             Contact Me
@@ -450,11 +450,11 @@
           </h2>
 
           <div
-            class="grid md:grid-cols-2 gap-16 items-center max-w-6xl mx-auto"
+            class="grid md:grid-cols-2 gap-8 md:gap-16 items-center max-w-6xl mx-auto"
           >
             <!-- Image Side -->
-            <div class="relative" data-aos="fade-right">
-              <div class="w-full max-w-md mx-auto">
+            <div class="relative px-4 md:px-0" data-aos="fade-right">
+              <div class="w-full max-w-sm mx-auto">
                 <div class="relative z-10">
                   <img
                     src="./images/person.png"
@@ -462,17 +462,20 @@
                     class="w-full h-auto rounded-2xl shadow-xl"
                   />
                   <div
-                    class="absolute -bottom-6 -right-6 w-32 h-32 bg-primary rounded-2xl -z-10 opacity-90"
+                    class="absolute -bottom-4 md:-bottom-6 -right-4 md:-right-6 w-24 md:w-32 h-24 md:h-32 bg-primary rounded-2xl -z-10 opacity-90"
                   ></div>
                   <div
-                    class="absolute -top-6 -left-6 w-32 h-32 border-2 border-primary rounded-2xl -z-10"
+                    class="absolute -top-4 md:-top-6 -left-4 md:-left-6 w-24 md:w-32 h-24 md:h-32 border-2 border-primary rounded-2xl -z-10"
                   ></div>
                 </div>
               </div>
             </div>
 
             <!-- Content Side -->
-            <div class="space-y-8" data-aos="fade-left">
+            <div
+              class="space-y-6 md:space-y-8 px-4 md:px-0"
+              data-aos="fade-left"
+            >
               <div class="space-y-4">
                 <h3 class="text-2xl font-semibold text-primary">
                   Get in Touch
@@ -485,8 +488,8 @@
               </div>
 
               <!-- Contact Form -->
-              <form class="space-y-6">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <form class="space-y-4 md:space-y-6">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6">
                   <div class="space-y-2">
                     <label class="text-sm font-medium">Full Name</label>
                     <input
@@ -525,7 +528,7 @@
 
                 <button
                   type="submit"
-                  class="w-full md:w-auto bg-primary text-white px-8 py-3.5 rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300 flex items-center justify-center gap-2 group"
+                  class="w-auto px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300 flex items-center justify-center gap-2 group"
                 >
                   <span>Send Message</span>
                   <svg
