--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                 class="relative rounded-full overflow-hidden border-4 border-primary/50"
               >
                 <img
-                  src="./images/person.png"
+                  src="./images/2.png"
                   alt="Profile Picture"
                   class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-500"
                 />
@@ -201,7 +201,7 @@
               <div class="w-full max-w-md mx-auto">
                 <div class="relative z-10">
                   <img
-                    src="./images/crop-person.png"
+                    src="./images/3.png"
                     alt="About Me"
                     class="w-full h-auto rounded-lg shadow-xl"
                   />
@@ -457,7 +457,7 @@
               <div class="w-full max-w-sm mx-auto">
                 <div class="relative z-10">
                   <img
-                    src="./images/person.png"
+                    src="./images/person.jpg"
                     alt="Contact Me"
                     class="w-full h-auto rounded-2xl shadow-xl"
                   />
