remove pics from contact

--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,6 @@
           </div>
         </div>
       </section>
-
       <!-- Contact Section -->
       <section id="contact" class="py-12 md:py-24 px-4">
         <div class="container mx-auto">
@@ -449,33 +448,9 @@
             <div class="w-24 h-1 bg-primary mx-auto mt-4 rounded-full"></div>
           </h2>
 
-          <div
-            class="grid md:grid-cols-2 gap-8 md:gap-16 items-center max-w-6xl mx-auto"
-          >
-            <!-- Image Side -->
-            <div class="relative px-4 md:px-0" data-aos="fade-right">
-              <div class="w-full max-w-sm mx-auto">
-                <div class="relative z-10">
-                  <img
-                    src="./images/person.jpg"
-                    alt="Contact Me"
-                    class="w-full h-auto rounded-2xl shadow-xl"
-                  />
-                  <div
-                    class="absolute -bottom-4 md:-bottom-6 -right-4 md:-right-6 w-24 md:w-32 h-24 md:h-32 bg-primary rounded-2xl -z-10 opacity-90"
-                  ></div>
-                  <div
-                    class="absolute -top-4 md:-top-6 -left-4 md:-left-6 w-24 md:w-32 h-24 md:h-32 border-2 border-primary rounded-2xl -z-10"
-                  ></div>
-                </div>
-              </div>
-            </div>
-
+          <div class="max-w-2xl mx-auto">
             <!-- Content Side -->
-            <div
-              class="space-y-6 md:space-y-8 px-4 md:px-0"
-              data-aos="fade-left"
-            >
+            <div class="space-y-6 md:space-y-8 px-4 md:px-0" data-aos="fade-up">
               <div class="space-y-4">
                 <h3 class="text-2xl font-semibold text-primary">
                   Get in Touch
