penyesuan gambar di home

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,8 @@
 
           <!-- Image Content -->
           <div class="order-1 md:order-2 relative" data-aos="fade-left">
-            <div class="relative w-64 h-64 md:w-96 md:h-96 mx-auto">
+            <!-- Update your home section image container -->
+            <div class="home-image-container" data-aos="fade-left">
               <div
                 class="absolute inset-0 bg-primary/20 rounded-full animate-blob animation-delay-2000"
               ></div>
