--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="nav">
       <div
-        class="container mx-auto px-4 flex items-center justify-between h-16 md:h-20"
+        class="container mx-auto px-4 flex items-center justify-between h-full"
       >
         <h1
           class="relative z-30 font-bold text-2xl tracking-tight hover:text-primary transition-colors duration-300"
@@ -28,8 +28,7 @@
         <div
           class="flex items-center flex-row-reverse md:flex-row gap-3 md:gap-12"
         >
-          <!-- Menu List -->
-          <ul id="menu" class="nav-menus translate-y-[-200%] md:translate-y-0">
+          <ul id="menu" class="nav-menus">
             <a class="nav-link group" href="#home">
               Home
               <span
