--- a/public/index.html
+++ b/public/index.html
@@ -87,27 +87,8 @@
       <!-- Home Section -->
       <section
         id="home"
-        class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-4 relative overflow-hidden"
+        class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-4 relative overflow-visible"
       >
-        <!-- Bubbles -->
-        <div class="absolute inset-0 pointer-events-none">
-          <div
-            class="absolute top-1/4 left-10 w-20 h-20 bg-primary/20 rounded-full animate-bubble"
-          ></div>
-          <div
-            class="absolute top-1/3 right-20 w-16 h-16 bg-blue-500/20 rounded-full animate-bubble-delay-2"
-          ></div>
-          <div
-            class="absolute bottom-1/4 left-1/3 w-24 h-24 bg-purple-500/20 rounded-full animate-bubble-delay-4"
-          ></div>
-          <div
-            class="absolute top-1/2 right-1/4 w-12 h-12 bg-primary/10 rounded-full animate-bubble"
-          ></div>
-          <div
-            class="absolute bottom-1/3 right-10 w-16 h-16 bg-blue-400/20 rounded-full animate-bubble-delay-2"
-          ></div>
-        </div>
-
         <!-- Background decorative elements -->
         <div
           class="absolute top-0 left-0 w-96 h-96 bg-primary/10 rounded-full blur-3xl"
