--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- ==================== -->
+    <!-- META TAGS & RESOURCES -->
+    <!-- ==================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Web</title>
+
+    <!-- CSS Resources -->
+    <!-- Style utama website -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Library untuk animasi scroll -->
+    <link href="./css/aos.css" rel="stylesheet" />
+
+    <!-- Font Resources -->
+    <!-- Menghubungkan ke Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="./css/aos.css" rel="stylesheet" />
+
+    <!-- Font Awesome untuk ikon -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
+
   <body>
-    <!-- Navbar -->
+    <!-- ==================== -->
+    <!-- NAVIGASI -->
+    <!-- ==================== -->
+    <!-- 
+      Komponen Navbar:
+      - Logo/Brand name di kiri
+      - Menu navigasi di kanan
+      - Toggle untuk dark mode
+      - Menu hamburger untuk mobile
+    -->
     <nav class="nav">
       <div
         class="container mx-auto px-4 flex items-center justify-between h-full"
@@ -82,9 +104,20 @@
       </div>
     </nav>
 
-    <!-- main section -->
+    <!-- ==================== -->
+    <!-- KONTEN UTAMA -->
+    <!-- ==================== -->
     <main class="container">
-      <!-- Home Section -->
+      <!-- ==================== -->
+      <!-- SECTION: HOME -->
+      <!-- ==================== -->
+      <!-- 
+        Bagian Hero:
+        - Teks intro dan CTA
+        - Animasi typewriter
+        - Gambar profil dengan efek
+        - Social media links
+      -->
       <section
         id="home"
         class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-4 relative overflow-visible"
@@ -133,8 +166,9 @@
             </div>
 
             <p class="text-gray-600 dark:text-gray-400 text-lg leading-relaxed">
-              Turning creative ideas into exceptional web experiences.
-              Specialized in modern web technologies and user-centric design.
+              Hello, I'm Okta Maulana, a software developer interested in new
+              technologies and always eager to solve problems with innovative
+              solutions.
             </p>
 
             <!-- Modern CTA Buttons -->
@@ -205,7 +239,8 @@
                 class="absolute -inset-0.5 bg-gradient-to-br from-primary to-blue-500 rounded-full blur opacity-30 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"
               ></div>
               <img
-                src="./images/3.png"
+                id="profile-image"
+                src="./images/2.png"
                 alt="Profile"
                 class="relative rounded-full border-4 border-white dark:border-gray-800 shadow-xl transform hover:scale-105 transition duration-500"
               />
@@ -214,7 +249,16 @@
         </div>
       </section>
 
-      <!-- About Section -->
+      <!-- ==================== -->
+      <!-- SECTION: ABOUT -->
+      <!-- ==================== -->
+      <!-- 
+        Bagian About:
+        - Info personal
+        - Skills dan expertise
+        - Experience highlights
+        - Progress bars
+      -->
       <section id="about" class="min-h-screen py-20 px-4">
         <div class="container mx-auto max-w-6xl">
           <!-- Section Title with modern styling -->
@@ -374,7 +418,15 @@
         </div>
       </section>
 
-      <!-- Portfolio Section -->
+      <!-- ==================== -->
+      <!-- SECTION: PORTFOLIO -->
+      <!-- ==================== -->
+      <!-- 
+        Bagian Portfolio:
+        - Filter projects
+        - Project cards dengan hover effects
+        - Links ke demo dan source code
+      -->
       <section id="portofolio" class="py-20 px-4">
         <div class="container mx-auto">
           <!-- Section Title -->
@@ -505,7 +557,15 @@
           </div>
         </div>
       </section>
-      <!-- Contact Section -->
+      <!-- ==================== -->
+      <!-- SECTION: CONTACT -->
+      <!-- ==================== -->
+      <!-- 
+        Bagian Contact:
+        - Form kontak
+        - Social media links
+        - Contact info
+      -->
       <section id="contact" class="py-12 md:py-24 px-4">
         <div class="container mx-auto">
           <!-- Section Title -->
@@ -602,7 +662,17 @@
       </section>
     </main>
 
-    <!-- Footer Section -->
+    <!-- ==================== -->
+    <!-- FOOTER -->
+    <!-- ==================== -->
+    <!-- 
+      Footer berisi:
+      - Quick links
+      - Contact info
+      - Newsletter signup
+      - Copyright
+      - Social media
+    -->
     <footer class="bg-gray-900 text-gray-300">
       <div class="container mx-auto py-12 px-4">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
@@ -726,7 +796,12 @@
       </div>
     </footer>
 
+    <!-- ==================== -->
+    <!-- SCRIPTS -->
+    <!-- ==================== -->
+    <!-- Script utama website -->
     <script src="./js/main.js"></script>
+    <!-- Library AOS untuk animasi scroll -->
     <script src="js/aos.js"></script>
   </body>
 </html>
