make a few improvment and add callback contact

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- ==================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio Web</title>
+    <title>Okta Maulana | software engineer</title>
 
     <!-- CSS Resources -->
     <!-- Style utama website -->
@@ -41,11 +41,12 @@
       <div
         class="container mx-auto px-4 flex items-center justify-between h-full"
       >
-        <h1
-          class="relative z-30 font-bold text-2xl tracking-tight hover:text-primary transition-colors duration-300"
+        <a
+          href="#"
+          class="relative z-30 hover:opacity-80 transition-opacity duration-300"
         >
-          Okta Maulana
-        </h1>
+          <img src="./images/icon.png" alt="Logo" class="h-10 w-auto" />
+        </a>
 
         <div
           class="flex items-center flex-row-reverse md:flex-row gap-3 md:gap-12"
@@ -203,28 +204,48 @@
             <!-- Modern Social Links -->
             <div class="flex gap-6 justify-center md:justify-start">
               <a
-                href="#"
+                href="https://github.com/atkooo"
                 class="social-link"
                 data-aos="fade-up"
                 data-aos-delay="100"
+                target="_blank"
               >
                 <i class="fab fa-github text-xl"></i>
               </a>
               <a
-                href="#"
+                href="https://www.linkedin.com/in/okta-maulana/"
                 class="social-link"
                 data-aos="fade-up"
                 data-aos-delay="200"
+                target="_blank"
               >
                 <i class="fab fa-linkedin text-xl"></i>
               </a>
               <a
-                href="#"
+                href="https://x.com/_Atkoo"
                 class="social-link"
                 data-aos="fade-up"
                 data-aos-delay="300"
               >
                 <i class="fab fa-twitter text-xl"></i>
+              </a>
+              <!-- instagram -->
+              <a
+                href="https://www.instagram.com/_okta_maulana/"
+                class="social-link"
+                data-aos="fade-up"
+                data-aos-delay="400"
+              >
+                <i class="fab fa-instagram text-xl"></i>
+              </a>
+              <!-- whatsapp -->
+              <a
+                href="https://wa.me/6281522716223"
+                class="social-link"
+                data-aos="fade-up"
+                data-aos-delay="500"
+              >
+                <i class="fab fa-whatsapp text-xl"></i>
               </a>
             </div>
           </div>
@@ -261,7 +282,7 @@
       -->
       <section id="about" class="min-h-screen py-20 px-4">
         <div class="container mx-auto max-w-6xl">
-          <!-- Section Title with modern styling -->
+          <!-- Title -->
           <div class="text-center mb-16" data-aos="fade-up">
             <span class="text-primary font-medium">DISCOVER</span>
             <h2 class="text-4xl md:text-5xl font-bold mt-2">
@@ -270,6 +291,20 @@
                 class="w-24 h-1 bg-gradient-to-r from-primary to-blue-500 mx-auto mt-4 rounded-full"
               ></div>
             </h2>
+          </div>
+
+          <!-- Motto -->
+          <div
+            class="text-center mb-12"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <p
+              class="text-2xl font-light italic text-gray-600 dark:text-gray-400"
+            >
+              "Turning Ideas into Reality through Code and Creativity"
+            </p>
+            <div class="w-16 h-0.5 bg-primary mx-auto mt-4"></div>
           </div>
 
           <!-- Modern Two Column Layout -->
@@ -290,11 +325,12 @@
                   class="relative z-10 rounded-2xl overflow-hidden shadow-xl"
                 >
                   <img
-                    src="./images/2.png"
+                    src="./images/4.jpg"
                     alt="Profile Picture"
                     class="w-full h-auto transform hover:scale-105 transition-transform duration-500"
                   />
                 </div>
+
                 <!-- Decorative floating elements -->
                 <div
                   class="absolute top-4 left-4 w-24 h-24 bg-primary/20 rounded-xl -z-10 animate-float"
@@ -314,12 +350,12 @@
                 <h3
                   class="text-2xl font-bold text-gray-800 dark:text-white mb-4"
                 >
-                  Frontend Developer
+                  Full-Stack Developer
                 </h3>
                 <p class="text-gray-600 dark:text-gray-300 leading-relaxed">
-                  Passionate about creating beautiful and functional web
-                  experiences. I specialize in modern frontend technologies and
-                  love bringing creative designs to life.
+                  I'm a passionate software developer with a strong foundation
+                  in frontend and backend technologies. I specialize in creating
+                  interactive, responsive, and user-friendly web applications.
                 </p>
               </div>
 
@@ -334,7 +370,7 @@
                     </div>
                     <div>
                       <h4 class="font-semibold">Experience</h4>
-                      <p class="text-gray-600 dark:text-gray-400">5+ Years</p>
+                      <p class="text-gray-600 dark:text-gray-400">4+ Years</p>
                     </div>
                   </div>
                 </div>
@@ -359,6 +395,32 @@
               <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg">
                 <h3 class="text-xl font-bold mb-6">Skills & Expertise</h3>
                 <div class="space-y-4">
+                  <!-- Dart -->
+                  <div>
+                    <div class="flex justify-between mb-1">
+                      <span class="font-medium">Dart</span>
+                      <span class="text-primary">85%</span>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full h-2">
+                      <div
+                        class="bg-primary h-2 rounded-full"
+                        style="width: 85%"
+                      ></div>
+                    </div>
+                  </div>
+                  <!-- Flutter -->
+                  <div>
+                    <div class="flex justify-between mb-1">
+                      <span class="font-medium">Flutter</span>
+                      <span class="text-blue-500">75%</span>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full h-2">
+                      <div
+                        class="bg-blue-500 h-2 rounded-full"
+                        style="width: 75%"
+                      ></div>
+                    </div>
+                  </div>
                   <!-- HTML -->
                   <div>
                     <div class="flex justify-between mb-1">
@@ -398,10 +460,10 @@
                       ></div>
                     </div>
                   </div>
-                  <!-- React -->
+                  <!-- PHP -->
                   <div>
                     <div class="flex justify-between mb-1">
-                      <span class="font-medium">React</span>
+                      <span class="font-medium">PHP</span>
                       <span class="text-green-500">80%</span>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full h-2">
@@ -473,10 +535,11 @@
                 </div>
               </div>
               <div class="p-4">
-                <h3 class="text-xl font-bold mb-2">Project Title</h3>
+                <h3 class="text-xl font-bold mb-2">ResQ</h3>
                 <p class="text-gray-600 dark:text-gray-400 mb-4">
-                  Short project description goes here. Explaining the main
-                  features and purpose.
+                  **RESQ** is an Android app to track ambulances and rescue
+                  teams in real-time, make emergency calls, and quickly report
+                  the location of an accident or disaster.
                 </p>
                 <div class="flex flex-wrap gap-2">
                   <span class="tech-tag">React</span>
@@ -508,15 +571,17 @@
                 </div>
               </div>
               <div class="p-4">
-                <h3 class="text-xl font-bold mb-2">Project Title</h3>
+                <h3 class="text-xl font-bold mb-2">SiMOGA</h3>
                 <p class="text-gray-600 dark:text-gray-400 mb-4">
-                  Short project description goes here. Explaining the main
-                  features and purpose.
+                  SIMOGA is an Android-based app that assists parents in
+                  recording and monitoring toddlers' food intake. With detailed
+                  tracking features, the app ensures balanced nutrition to
+                  support their growth and development.
                 </p>
                 <div class="flex flex-wrap gap-2">
-                  <span class="tech-tag">React</span>
-                  <span class="tech-tag">TailwindCSS</span>
-                  <span class="tech-tag">Node.js</span>
+                  <span class="tech-tag">Flutter</span>
+                  <span class="tech-tag">Dart</span>
+                  <span class="tech-tag">TensorFlow API</span>
                 </div>
               </div>
             </div>
@@ -597,12 +662,30 @@
                 </div>
 
                 <!-- Contact Form -->
-                <form class="space-y-4 md:space-y-6">
+                <form
+                  action="https://formsubmit.co/oktamaulana12@gmail.com"
+                  method="POST"
+                  class="space-y-4 md:space-y-6"
+                >
+                  <input
+                    type="hidden"
+                    name="_subject"
+                    value="New Contact Form Submission"
+                  />
+                  <input type="hidden" name="_captcha" value="false" />
+                  <input
+                    type="hidden"
+                    name="_next"
+                    value="http://127.0.0.1:5500/public/success.html"
+                  />
+
                   <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6">
                     <div class="space-y-2">
                       <label class="text-sm font-medium">Full Name</label>
                       <input
                         type="text"
+                        name="name"
+                        required
                         placeholder="John Doe"
                         class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
@@ -611,6 +694,8 @@
                       <label class="text-sm font-medium">Email Address</label>
                       <input
                         type="email"
+                        name="email"
+                        required
                         placeholder="john@example.com"
                         class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
@@ -621,6 +706,8 @@
                     <label class="text-sm font-medium">Subject</label>
                     <input
                       type="text"
+                      name="subject"
+                      required
                       placeholder="Project Inquiry"
                       class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                     />
@@ -629,6 +716,8 @@
                   <div class="space-y-2">
                     <label class="text-sm font-medium">Message</label>
                     <textarea
+                      name="message"
+                      required
                       rows="4"
                       placeholder="Your message here..."
                       class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 resize-none"
@@ -641,7 +730,7 @@
                   >
                     <span>Send Message</span>
                     <svg
-                      class="w-5 h-5 transform group-hover:translate-x-1 transition-transform duration-300"
+                      class="w-5 h-5 transform group-hover:translate-x-1 transition-trans duration-300"
                       fill="none"
                       stroke="currentColor"
                       viewBox="0 0 24 24"
