--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,12 @@
           href="#"
           class="relative z-30 hover:opacity-80 transition-opacity duration-300"
         >
-          <img src="./images/icon.png" alt="Logo" class="h-10 w-auto" />
+          <img
+            id="nav-logo"
+            src="./images/icon.svg"
+            alt="Logo"
+            class="h-10 w-auto"
+          />
         </a>
 
         <div
@@ -517,7 +522,7 @@
             <div class="project-card group" data-aos="fade-up">
               <div class="relative overflow-hidden rounded-xl">
                 <img
-                  src="./images/random-portfolio.jpg"
+                  src="./images/portfolio/resq.jpg"
                   alt="Project 1"
                   class="w-full h-64 object-cover transform group-hover:scale-110 transition-transform duration-500"
                 />
@@ -537,23 +542,23 @@
               <div class="p-4">
                 <h3 class="text-xl font-bold mb-2">ResQ</h3>
                 <p class="text-gray-600 dark:text-gray-400 mb-4">
-                  **RESQ** is an Android app to track ambulances and rescue
-                  teams in real-time, make emergency calls, and quickly report
-                  the location of an accident or disaster.
+                  RESQ is an Android app to track ambulances and rescue teams in
+                  real-time, make emergency calls, and quickly report the
+                  location of an accident or disaster.
                 </p>
                 <div class="flex flex-wrap gap-2">
-                  <span class="tech-tag">React</span>
-                  <span class="tech-tag">TailwindCSS</span>
-                  <span class="tech-tag">Node.js</span>
+                  <span class="tech-tag">Java</span>
+                  <span class="tech-tag">OpenStreetMap API</span>
+                  <span class="tech-tag">OSMDroid</span>
                 </div>
               </div>
             </div>
 
-            <!-- Project Card 1 -->
+            <!-- Project Card 2 -->
             <div class="project-card group" data-aos="fade-up">
               <div class="relative overflow-hidden rounded-xl">
                 <img
-                  src="./images/random-portfolio.jpg"
+                  src="./images/portfolio/simoga.jpg"
                   alt="Project 1"
                   class="w-full h-64 object-cover transform group-hover:scale-110 transition-transform duration-500"
                 />
@@ -585,11 +590,11 @@
                 </div>
               </div>
             </div>
-            <!-- Project Card 1 -->
+            <!-- Project Card 3 -->
             <div class="project-card group" data-aos="fade-up">
               <div class="relative overflow-hidden rounded-xl">
                 <img
-                  src="./images/random-portfolio.jpg"
+                  src="./images/portfolio/klinik.png"
                   alt="Project 1"
                   class="w-full h-64 object-cover transform group-hover:scale-110 transition-transform duration-500"
                 />
@@ -607,15 +612,17 @@
                 </div>
               </div>
               <div class="p-4">
-                <h3 class="text-xl font-bold mb-2">Project Title</h3>
+                <h3 class="text-xl font-bold mb-2">
+                  Booking Service - Poltekkes Pontianak
+                </h3>
                 <p class="text-gray-600 dark:text-gray-400 mb-4">
-                  Short project description goes here. Explaining the main
-                  features and purpose.
+                  A booking platform for Poltekkes Pontianak that streamlines
+                  scheduling services and appointments for students and staff.
                 </p>
                 <div class="flex flex-wrap gap-2">
-                  <span class="tech-tag">React</span>
-                  <span class="tech-tag">TailwindCSS</span>
-                  <span class="tech-tag">Node.js</span>
+                  <span class="tech-tag">PHP</span>
+                  <span class="tech-tag">Laravel</span>
+                  <span class="tech-tag">Bootstrap</span>
                 </div>
               </div>
             </div>
@@ -769,16 +776,15 @@
           <div class="space-y-4">
             <h3 class="text-2xl font-bold text-white mb-4">Okta Maulana</h3>
             <p class="text-gray-400 leading-relaxed">
-              A passionate frontend developer focused on creating interactive,
-              accessible, and responsive websites.
+              Turning Ideas into Reality through Code and Creativity
             </p>
             <div class="flex items-center space-x-2 text-gray-400">
               <i class="fas fa-map-marker-alt text-primary"></i>
-              <span>Jakarta, Indonesia</span>
+              <span>Pontianak, Indonesia</span>
             </div>
             <div class="flex items-center space-x-2 text-gray-400">
               <i class="fas fa-envelope text-primary"></i>
-              <span>contact@example.com</span>
+              <span>oktamaulana12@gmail.com</span>
             </div>
           </div>
 
@@ -862,19 +868,19 @@
             <!-- Social Links -->
             <div class="flex gap-4">
               <a
-                href="#"
+                href="https://github.com/atkooo"
                 class="hover:text-primary transition-colors duration-300"
               >
                 <i class="fab fa-github text-xl"></i>
               </a>
               <a
-                href="#"
+                href="https://www.linkedin.com/in/okta-maulana/"
                 class="hover:text-primary transition-colors duration-300"
               >
                 <i class="fab fa-linkedin text-xl"></i>
               </a>
               <a
-                href="#"
+                href="https://x.com/_Atkoo"
                 class="hover:text-primary transition-colors duration-300"
               >
                 <i class="fab fa-twitter text-xl"></i>
