--- a/public/index.html
+++ b/public/index.html
@@ -693,7 +693,7 @@
                         type="text"
                         name="name"
                         required
-                        placeholder="John Doe"
+                        placeholder="Your Name"
                         class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
                     </div>
