--- a/public/index.html
+++ b/public/index.html
@@ -697,6 +697,7 @@
                         class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
                     </div>
+                    <!-- tes -->
                     <div class="space-y-2">
                       <label class="text-sm font-medium">Email Address</label>
                       <input
