--- a/public/index.html
+++ b/public/index.html
@@ -683,7 +683,7 @@
                   <input
                     type="hidden"
                     name="_next"
-                    value="http://127.0.0.1:5500/public/success.html"
+                    value="https://okta-portofolio.vercel.app/public/success.html"
                   />
 
                   <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6">
