update the responsive

--- a/public/index.html
+++ b/public/index.html
@@ -770,17 +770,17 @@
       - Copyright
       - Social media
     -->
-    <!-- FOOTER -->
-    <footer class="bg-gray-900 text-gray-300">
-      <div class="container mx-auto py-12 px-4">
+
+    <footer class="bg-gray-900 text-gray-300 w-full">
+      <div class="w-full mx-auto py-8 px-4 sm:px-6 lg:px-8">
         <!-- Update grid columns and gap -->
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-12"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-12"
         >
           <!-- About/Contact Column -->
           <div class="space-y-4 md:col-span-2 lg:col-span-1">
             <h3 class="text-2xl font-bold text-white mb-4">Okta Maulana</h3>
-            <p class="text-gray-400 leading-relaxed max-w-md">
+            <p class="text-gray-400 leading-relaxed">
               Turning Ideas into Reality through Code and Creativity
             </p>
             <div class="flex items-center space-x-2 text-gray-400">
