--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
             <br />
             <!-- Add CV Download Button -->
             <a
-              href="./cv/cv-okta.pdf"
+              href="https://drive.google.com/uc?export=download&id=1-AnQK1H-M3L_5jl-tm7BeHLhZM-ScQWJ"
               download
               class="inline-flex items-center gap-2 px-6 py-3 bg-primary text-white rounded-full hover:bg-primary/90 transition-colors shadow-lg hover:shadow-xl"
             >
