--- a/public/index.html
+++ b/public/index.html
@@ -93,13 +93,17 @@
           <!-- Toggle Theme -->
           <button
             id="toggle-theme"
-            class="relative z-30 hover:opacity-75 transition-opacity duration-300 dark:invert"
+            class="relative z-30 w-12 h-6 rounded-full bg-gray-200 dark:bg-primary flex items-center transition-colors duration-300 focus:outline-none"
           >
-            <img
-              class="w-6 h-6 md:opacity-70 md:hover:opacity-100 transition-opacity duration-300"
-              src="./images/icons/icon-dark.svg"
-              alt="theme"
-            />
+            <div
+              class="w-5 h-5 rounded-full bg-white dark:bg-primary-black transform translate-x-0.5 dark:translate-x-6 transition-transform duration-300 flex items-center justify-center"
+            >
+              <img
+                class="w-3 h-3 transition-opacity duration-300"
+                src="./images/icons/icon-dark.svg"
+                alt="theme"
+              />
+            </div>
           </button>
         </div>
       </div>
@@ -735,7 +739,7 @@
                         type="email"
                         name="email"
                         required
-                        placeholder="john@example.com"
+                        placeholder="user@example.com"
                         class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
                     </div>
