--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,10 @@
           </div>
 
           <!-- Image Content -->
-          <div class="order-1 md:order-2 relative" data-aos="fade-left">
+          <div
+            class="order-1 md:order-2 relative w-72 sm:w-80 md:w-96 lg:w-[450px] mx-auto"
+            data-aos="fade-left"
+          >
             <div class="relative z-10">
               <div
                 class="absolute inset-0 bg-gradient-to-br from-primary/20 to-blue-500/20 rounded-full animate-pulse"
@@ -265,9 +268,9 @@
               ></div>
               <img
                 id="profile-image"
-                src="./images/2.png"
+                src="./images/21.png"
                 alt="Profile"
-                class="relative rounded-full border-4 border-white dark:border-gray-800 shadow-xl transform hover:scale-105 transition duration-500"
+                class="relative w-full h-auto rounded-full border-4 border-white dark:border-gray-800 shadow-xl transform hover:scale-105 transition duration-500"
               />
             </div>
           </div>
