--- a/public/index.html
+++ b/public/index.html
@@ -128,12 +128,11 @@
         class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-4 relative overflow-visible"
       >
         <!-- Background decorative elements -->
-        <div
-          class="absolute top-0 left-0 w-96 h-96 bg-primary/10 rounded-full blur-3xl"
-        ></div>
-        <div
-          class="absolute bottom-0 right-0 w-96 h-96 bg-blue-500/10 rounded-full blur-3xl"
-        ></div>
+        <div class="absolute inset-0 overflow-hidden pointer-events-none">
+          <div
+            class="bubble-effect animate-bubble bg-primary/5 dark:bg-primary/10 rounded-full"
+          ></div>
+        </div>
 
         <!-- Floating shapes -->
         <div
@@ -144,7 +143,7 @@
         ></div>
 
         <div
-          class="grid md:grid-cols-2 gap-12 items-center max-w-6xl w-full relative z-10"
+          class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-8 items-center"
         >
           <!-- Text Content -->
           <div
@@ -255,24 +254,24 @@
           </div>
 
           <!-- Image Content -->
-          <div
-            class="order-1 md:order-2 relative w-72 sm:w-80 md:w-96 lg:w-[450px] mx-auto"
-            data-aos="fade-left"
-          >
-            <div class="relative z-10">
-              <div
-                class="absolute inset-0 bg-gradient-to-br from-primary/20 to-blue-500/20 rounded-full animate-pulse"
-              ></div>
-              <div
-                class="absolute -inset-0.5 bg-gradient-to-br from-primary to-blue-500 rounded-full blur opacity-30 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"
-              ></div>
+          <!-- Profile Image Container -->
+          <div class="relative w-full aspect-square max-w-[400px] mx-auto">
+            <div
+              class="absolute inset-0 bg-gradient-to-b from-primary/10 to-transparent rounded-full"
+            ></div>
+            <div
+              class="w-full h-full rounded-full border-4 border-primary/20 overflow-hidden shadow-xl"
+            >
               <img
-                id="profile-image"
                 src="./images/21.png"
                 alt="Profile"
-                class="relative w-full h-auto rounded-full border-4 border-white dark:border-gray-800 shadow-xl transform hover:scale-105 transition duration-500"
+                class="w-full h-full object-cover object-center"
               />
             </div>
+            <!-- Optional decorative circle -->
+            <div
+              class="absolute -inset-4 border-2 border-dashed border-primary/20 rounded-full animate-spin-slow"
+            ></div>
           </div>
         </div>
       </section>
