--- a/public/index.html
+++ b/public/index.html
@@ -125,14 +125,35 @@
       -->
       <section
         id="home"
-        class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-4 relative overflow-visible"
+        class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-8 relative"
       >
         <!-- Background decorative elements -->
-        <div class="absolute inset-0 overflow-hidden pointer-events-none">
+        <div class="absolute inset-0 overflow-visible pointer-events-none">
+          <!-- Main bubbles with adjusted colors and opacity -->
           <div
-            class="bubble-effect animate-bubble bg-primary/5 dark:bg-primary/10 rounded-full"
+            class="bubble-effect animate-bubble bg-primary/20 dark:bg-primary/10 rounded-full w-80 h-80 absolute top-20 left-20"
+          ></div>
+          <div
+            class="bubble-effect animate-bubble-delay-2 bg-blue-500/20 dark:bg-blue-500/10 rounded-full w-64 h-64 absolute top-40 right-40"
+          ></div>
+          <div
+            class="bubble-effect animate-bubble-delay-4 bg-primary/20 dark:bg-primary/10 rounded-full w-72 h-72 absolute bottom-40 left-1/3"
+          ></div>
+
+          <!-- Smaller decorative bubbles with adjusted opacity -->
+          <div
+            class="w-8 h-8 bg-primary/30 dark:bg-primary/20 rounded-full absolute top-1/4 left-1/3 animate-float"
+          ></div>
+          <div
+            class="w-6 h-6 bg-blue-500/30 dark:bg-blue-500/20 rounded-full absolute top-1/3 right-1/4 animate-float delay-2"
+          ></div>
+          <div
+            class="w-4 h-4 bg-primary/30 dark:bg-primary/20 rounded-full absolute bottom-1/4 right-1/3 animate-float delay-4"
           ></div>
         </div>
+        <div
+          class="absolute inset-0 bg-gradient-to-b from-transparent to-white/5 dark:to-gray-900/5 pointer-events-none"
+        ></div>
 
         <!-- Floating shapes -->
         <div
